redis-uv-spring-boot-starter依赖

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>redis-pv-spring-boot-starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.zhong</groupId>
+            <artifactId>redis-uv-spring-boot-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
