redis-uv-spring-boot-starter配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ pv.isopen=true
 pv.prefix=pv
 pv.date-format=yyyyMMdd
 pv.api=true #提供查询pv前10的接口ps http://127.0.0.1:8080/top_10/pv:20200623
+
+#redis-uv-spring-boot-starter 配置
+uv.isopen=true
+uv.api=true
+uv.prefix=uv
+uv.date-format=yyyyMMdd
